flux/flux-system/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: monitoring
  namespace: monitoring
spec:
  rules:
  - host: grafana.gerardosalazar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - grafana.gerardosalazar.com
    secretName: monitoring-cert # < cert-manager will store the created certificate in this secret.
